--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Sakai - PrimeNG</title>
+        <title>Clinic Flow</title>
         <base href="/" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.o" />
-        <link rel="preconnect" href="https://primefaces.org" />
-        <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png" />
-        <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://aphelionxinnovations.com/" />
+        <link rel="icon" href="/assets/images/favicon.ico" />
+        <link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet" />
     </head>
 
     <body>
